force-app/main/default/objects/Competitor_Contacts__c/Competitor_Contacts__c.object-meta.xml
<CustomObject>
    <description>MSD to the Competitor object. This object is to capture competitor contacts.</description>
    <label>Competitor Contacts</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Competitor ContactsID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>