force-app/main/default/objects/Competitor_Contacts__c/fields/Address_Street_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Street_1__c</fullName>
    <label>Address – Street 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>