force-app/main/default/objects/Competitor_Contacts__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>