force-app/main/default/objects/Competitor_Contacts__c/fields/Province_Other__c.field-meta.xml
<CustomField>
    <fullName>Province_Other__c</fullName>
    <label>Province/Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>